--- a/app/src/main/res/layout/fragment_book_catalogue.xml
+++ b/app/src/main/res/layout/fragment_book_catalogue.xml
@@ -28,6 +28,16 @@
         android:gravity="center"
         android:textSize="16sp"
         android:padding="16dp" />
+    <Button
+        android:id="@+id/btnRetry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retry"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/tvNoBooks"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBooks"
