--- a/app/src/main/res/layout/fragment_staff_edit_delete_book.xml
+++ b/app/src/main/res/layout/fragment_staff_edit_delete_book.xml
@@ -136,12 +136,6 @@
             android:layout_height="wrap_content"
             android:text="Cancel" />
         <Button
-            android:id="@+id/btnBookReviews"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="See Book Reviews" />
-        <Button
             android:id="@+id/btnDelete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -149,5 +143,19 @@
             android:text="Delete"
             android:backgroundTint="@android:color/holo_red_dark"
             android:textColor="@android:color/white" />
+        <Button
+            android:id="@+id/btnBookReviews"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="See Book Reviews"
+            android:backgroundTint="@android:color/holo_green_light"/>
+        <Button
+            android:id="@+id/btnBookStatistics"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="See Book Statistics"
+            android:backgroundTint="@android:color/holo_orange_light"/>
     </LinearLayout>
 </ScrollView>
