--- a/app/src/main/res/layout/fragment_user_books.xml
+++ b/app/src/main/res/layout/fragment_user_books.xml
@@ -24,6 +24,16 @@
         android:layout_below="@id/tvNoBooks"
         android:layout_marginTop="10dp"
         />
+    <Button
+        android:id="@+id/btnRetry"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retry"
+        android:layout_gravity="center"
+        android:layout_below="@id/tvNoBooks"
+        android:layout_marginTop="10dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewUserBooks"
